// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LikertScale renders the component correctly 1`] = `
<div
  className="likert-scale"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="label"
  >
    Felt True to Size
  </div>
  <div
    className="dot-points"
  >
    <div
      className="small-dot"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span>
        Runs Small
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "25%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span>
        True to Size
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "100%",
        }
      }
    >
      <span>
        Runs Large
      </span>
    </div>
  </div>
  <div
    className="dot"
    style={
      Object {
        "left": "47.5%",
      }
    }
  />
  <div
    className="line"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`LikertScale renders the component correctly 2`] = `
<div
  className="likert-scale"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="label"
  >
    Felt Full Size Smaller
  </div>
  <div
    className="dot-points"
  >
    <div
      className="small-dot"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span>
        Runs Small
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "25%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span>
        True to Size
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "100%",
        }
      }
    >
      <span>
        Runs Large
      </span>
    </div>
  </div>
  <div
    className="dot"
    style={
      Object {
        "left": "-2.5%",
      }
    }
  />
  <div
    className="line"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`LikertScale renders the component correctly 3`] = `
<div
  className="likert-scale"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="label"
  >
    Felt Half Size Larger
  </div>
  <div
    className="dot-points"
  >
    <div
      className="small-dot"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span>
        Runs Small
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "25%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span>
        True to Size
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "100%",
        }
      }
    >
      <span>
        Runs Large
      </span>
    </div>
  </div>
  <div
    className="dot"
    style={
      Object {
        "left": "72.5%",
      }
    }
  />
  <div
    className="line"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`LikertScale renders the component correctly 4`] = `
<div
  className="likert-scale"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="label"
  >
    Felt Slightly Narrow
  </div>
  <div
    className="dot-points"
  >
    <div
      className="small-dot"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span>
        Runs Narrow
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "25%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span>
        True to Width
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "100%",
        }
      }
    >
      <span>
        Runs Wide
      </span>
    </div>
  </div>
  <div
    className="dot"
    style={
      Object {
        "left": "22.5%",
      }
    }
  />
  <div
    className="line"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`LikertScale renders the component correctly 5`] = `
<div
  className="likert-scale"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="label"
  >
    Felt Wide
  </div>
  <div
    className="dot-points"
  >
    <div
      className="small-dot"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span>
        Runs Narrow
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "25%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span>
        True to Width
      </span>
    </div>
    <div
      className="small-dot"
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <div
      className="small-dot"
      style={
        Object {
          "left": "100%",
        }
      }
    >
      <span>
        Runs Wide
      </span>
    </div>
  </div>
  <div
    className="dot"
    style={
      Object {
        "left": "97.5%",
      }
    }
  />
  <div
    className="line"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;
